test/scc/stmt/semantic-errors/030.t
void test()
{
    do
        int a;
    while(1);
}